homeworks/homework_1/task_1/console-output.txt
D:\Scala\bin>scala
Welcome to Scala 2.12.10 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_45).
Type in expressions for evaluation. Or try :help.

scala> "Hello Scala! This is ${Ars}"
res0: String = Hello Scala! This is ${Ars}

scala> Ars = "Top"
<console>:11: error: not found: value Ars
       Ars = "Top"
       ^
<console>:12: error: not found: value Ars
       val $ires0 = Ars
                    ^

scala> "Hello Scala"
res1: String = Hello Scala

scala> val name = "Ars"
name: String = Ars

scala> s"Hello Scala! This ih ${name}"
res2: String = Hello Scala! This ih Ars

scala> s"Hola Scala! This ih ${name}"
res3: String = Hola Scala! This ih Ars

scala> s"Guten tag Scala! This ih ${name}"
res4: String = Guten tag Scala! This ih Ars

scala> s"Hello Scala! This is ${name}"
res5: String = Hello Scala! This is Ars

scala> s"Guten tag Scala! This is ${name}"
res6: String = Guten tag Scala! This is Ars

scala> s"Hola Scala! This is ${name}"
res7: String = Hola Scala! This is Ars

scala> s"Hello Scala! This is ${name.reverse}"
res8: String = Hello Scala! This is srA

scala> s"Guten tag Scala! This is ${name.reverse}"
res9: String = Guten tag Scala! This is srA

scala> s"Hola Scala! This is ${name.reverse}"
res10: String = Hola Scala! This is srA
